--- a/index.html
+++ b/index.html
@@ -23,12 +23,31 @@
 
         </header>
 
-        <div id="headings">
-            <p id="mainheadline"> Flexible scheduling software to <br> help you succeed</p>
-            <p id="subheadline">With seamless client scheduling, secure payments, and workflow <br> automation, all you
-                have to do is show up on time.</p>
+        
+        <p id="mainheadline"> Flexible scheduling software to <br> help you succeed</p>
+        <p id="subheadline">With seamless client scheduling, secure payments, and workflow <br> automation, all you have to do is show up on time.</p>
+        
+
+        <div id="whitescheduling">
+            Try Scheduling
         </div>
 
+        <div id="content">
+            No credit card needed.
+        </div>
+
+        <figure class="photos">
+            <img src="assets/blowout@4x.webp.png" class="img">
+            <img src="assets/hair@4x.webp.png" class="img">
+            <img src="assets/reiki@4x.webp.png" class="img">
+            <img src="assets/lens@4x.webp.png" class="img">
+            <img src="assets/car@4x.webp.png" class="img">
+        </figure>
+
+        <div id="film">
+            <img src="assets/play.svg.svg" id="playbutton">
+            <p id="Watch"> Watch the Film</p>
+        </div>
 
     </section>
 </body>
